Displaying existing jobs, copying jobs

--- a/.project
+++ b/.project
@@ -27,4 +27,15 @@
 		<nature>org.eclipse.wst.common.project.facet.core.nature</nature>
 		<nature>org.eclipse.wst.jsdt.core.jsNature</nature>
 	</natures>
+	<filteredResources>
+		<filter>
+			<id>1353582443584</id>
+			<name></name>
+			<type>10</type>
+			<matcher>
+				<id>org.eclipse.ui.ide.multiFilter</id>
+				<arguments>1.0-name-matches-false-false-test-output</arguments>
+			</matcher>
+		</filter>
+	</filteredResources>
 </projectDescription>
